# atarist_conio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: conio.c  conio.h
src/testapp/: main.c  startup.S
